# CodeFusion

./: .gitignore  CodeFusion.sln  Readme.md  cross.cf  lib.cf  test.cf  test.ps1
.github/workflows/: test.yml
CodeFusion/: CodeFusion.csproj  Program.cs
CodeFusion.ASM/: CodeFusion.ASM.csproj  Options.cs  Program.cs  Report.cs
CodeFusion.ASM/Compiling/: Combinder.cs  Combiner.cs  Compiler.cs  Loader.cs
CodeFusion.ASM/Lexing/: Lexer.cs  SourceFile.cs  Span.cs  Token.cs  TokenType.cs
CodeFusion.ASM/Parsing/: CodeUnit.cs  ObjectUnit.cs  Parser.cs
CodeFusion.Builder/: CodeFusion.Builder.csproj  Platform.cs  Program.cs
CodeFusion.Builder/Generator/: Executable.cs  Helper.cs  Library.cs
CodeFusion.Dump/: Program.cs
CodeFusion.Execution/: Program.cs
CodeFusion.Image/: CMakeLists.txt  Makefile  library.c  main.c
CodeFusion.Image/bridge/: dll.h  interrupt.h
CodeFusion.Image/cf/: CodeFusion.h  debug.h  hashmap.c  hashmap.h  loader.c  loader.h  machine.c  machine.h  opcode.c  opcode.h
CodeFusion.Image/interrupt/: cross.c
CodeFusion.Image/loader/: win.c
CodeFusion/Execution/: Error.cs  Runner.cs
CodeFusion/Ext/: MemoryStreamExt.cs
CodeFusion/Format/: AddressSection.cs  BinFile.cs  FinFile.cs  (+9 more)
ISC/: ISC.csproj  Program.cs
IllusionScript/: IllusionScript.csproj  Program.cs
Runtime/: Compilation.cs  Runtime.csproj
Runtime.Test/: AnnotatedText.cs  AssertingEnumerator.cs  Runtime.Test.csproj
examples/: basic.cf  dllloader.cf  dllloader_memory.cf  int.cf
native/: crtbegin.cf  crtend.cf  interrupts.cf
proj/: test.ils
samples/: ggT.ils
(+106 files in other folders)
